--- a/index.html
+++ b/index.html
@@ -1,60 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My GitHub Page</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f2f5;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        header {
-            background-color: #24292e;
-            color: white;
-            width: 100%;
-            padding: 20px 0;
-            text-align: center;
-        }
-        main {
-            padding: 40px 20px;
-            text-align: center;
-        }
-        a {
-            color: #0366d6;
-            text-decoration: none;
-        }
-        a:hover {
-            text-decoration: underline;
-        }
-        footer {
-            margin-top: 50px;
-            padding: 20px;
-            width: 100%;
-            text-align: center;
-            background-color: #e1e4e8;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Nick's Low Intensity Builds</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <h1>Welcome to My GitHub Page</h1>
-    </header>
-    <main>
-        <p>Hello! This is a basic GitHub Pages site.</p>
-        <p>You can link to other pages or resources:</p>
-        <ul>
-            <li><a href="https://www.youtube.com/">My Favorite Videos</a></li>
-            <li><a href="about.html">About Me</a></li>
-        </ul>
-    </main>
-    <footer>
-        &copy; 2025 My GitHub Page
-    </footer>
+
+<h1>Nick's Low Intensity Builds</h1>
+<div style="text-align:center; margin-bottom:20px;">
+  <a href="https://www.youtube.com/@NickTheInfamous" target="_blank" style="color:#e6e6e6; text-decoration:underline; font-size:1.1em;">https://www.youtube.com/@NickTheInfamous</a>
+</div>
+
+<div class="accordion">
+
+  <!-- WARRIOR -->
+  <div class="accordion-item">
+    <div class="accordion-header">
+      Warrior
+      <span class="arrow">▸</span>
+    </div>
+    <div class="accordion-content">
+
+      <!-- Nested Build -->
+      <div class="accordion-item nested">
+        <div class="accordion-header nested">
+          1 Button Paragon 31k
+          <span class="arrow">▸</span>
+        </div>
+        <div class="accordion-content nested">
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                  frameborder="0" allowfullscreen></iframe>
+        </div>
+        <div class="accordion-header nested">
+          2 Button Paragon 33k
+          <span class="arrow">▸</span>
+        </div>
+        <div class="accordion-content nested">
+          <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                  frameborder="0" allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <!-- Add more builds here if needed -->
+
+    </div>
+  </div>
+
+  <!-- Other Classes -->
+  <div class="accordion-item">
+    <div class="accordion-header">Guardian <span class="arrow">▸</span></div>
+    <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header">Revenant <span class="arrow">▸</span></div>
+    <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header">Ranger <span class="arrow">▸</span></div>
+    <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header">Thief <span class="arrow">▸</span></div>
+    <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header">Engineer <span class="arrow">▸</span></div>
+    <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header">Elementalist <span class="arrow">▸</span></div>
+    <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header">Mesmer <span class="arrow">▸</span></div>
+    <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
+  </div>
+
+  <div class="accordion-item">
+    <div class="accordion-header">Necromancer <span class="arrow">▸</span></div>
+    <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
+  </div>
+
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
