--- a/index.html
+++ b/index.html
@@ -12,140 +12,143 @@
 
 <h1>Nick's Low Intensity Builds</h1>
 <div style="text-align:center; margin-bottom:8px;">
-  <a href="https://www.youtube.com/@NickTheInfamous" target="_blank" style="color:#e6e6e6; text-decoration:underline; font-size:1.1em;">https://www.youtube.com/@NickTheInfamous</a>
+  <a href="https://www.youtube.com/@NickTheInfamous" target="_blank" style="color:#e6e6e6; text-decoration:underline; font-size:1.1em;">YouTube Link</a>
 </div>
 <div style="text-align:center; margin-bottom:16px; color:#bdbdbd; font-size:1em;">
   Here you'll find my collection of Guild Wars 2 low intensity builds. These are beginner-friendly and designed to help you get into endgame PvE content quickly, succeed in any encounter, and fit well in most squads. Good luck on your endgame journey.
-</div>
 </div>
 
 <div class="accordion">
 
   <!-- WARRIOR -->
-    <div class="accordion-item">
-      <div class="accordion-header">
-        Warrior
-        <span class="arrow">▸</span>
-      </div>
-      <div class="accordion-content">
-        <div class="accordion-item nested">
-          <div class="accordion-header nested">0 Button Warrior Power 25.1k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/3QD9NhosBYg" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">1 Button Paragon Power 31k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/3RQamzo3aPI" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">1 Button Paragon Condi 31.5k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/9Xb-hqyWRWs" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">1 Button Spellbreaker Power 31.4k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/2aUPI9TVkHI" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">3 Button Paragon Condi 36.2k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/1eGpoPBNQ-w" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">3 Button Berserker Power 34.5k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/q6-7iMRAPko" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">3 Button Berserker Condi 33.3k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/AUHkG8CcOqM" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">3 Button Bladesworn Power 33.4k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/QVdiWW37Fjw" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">4 Button Spellbreaker Power 36.5k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/k52-to6IIwI" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">4 Button Paragon Power 35.1k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/js1wtQoI_5k" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">4 Button Paragon Condi 38.1k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/nAF_GNJM9lM" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">4 Button Paragon Alacrity Healer <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/pLIeb-eTgUA" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">5 Button Paragon Power 36.2k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/PTbsdQu5OEE" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">5 Button Berserker Condi 38k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/VlzpmxgIOX4" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">5 Button Spellbreaker Power 37.7k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/6MZvGCfEJak" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">6 Button Berserker Power 39.1k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/M9xxFXsYJqo" frameborder="0" allowfullscreen></iframe></div>
-        </div>
+  <div class="accordion-item" id="warrior">
+    <div class="accordion-header">Warrior <span class="arrow">▸</span></div>
+    <div class="accordion-content">
+      <div class="accordion-item nested">
+        <div class="accordion-header nested">0 Button Warrior Power 25.1k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/3QD9NhosBYg" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">1 Button Paragon Power 31k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/3RQamzo3aPI" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">1 Button Paragon Condi 31.5k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/9Xb-hqyWRWs" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">1 Button Spellbreaker Power 31.4k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/2aUPI9TVkHI" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">3 Button Paragon Condi 36.2k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/1eGpoPBNQ-w" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">3 Button Berserker Power 34.5k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/q6-7iMRAPko" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">3 Button Berserker Condi 33.3k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/AUHkG8CcOqM" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">3 Button Bladesworn Power 33.4k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/QVdiWW37Fjw" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">4 Button Spellbreaker Power 36.5k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/k52-to6IIwI" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">4 Button Paragon Power 35.1k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/js1wtQoI_5k" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">4 Button Paragon Condi 38.1k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/nAF_GNJM9lM" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">4 Button Paragon Alacrity Healer <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/pLIeb-eTgUA" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">5 Button Paragon Power 36.2k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/PTbsdQu5OEE" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">5 Button Berserker Condi 38k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/VlzpmxgIOX4" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">5 Button Spellbreaker Power 37.7k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/6MZvGCfEJak" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">6 Button Berserker Power 39.1k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/M9xxFXsYJqo" frameborder="0" allowfullscreen></iframe></div>
       </div>
     </div>
-
-  <!-- Other Classes -->
-  <div class="accordion-item">
-    <div class="accordion-header">Guardian <span class="arrow">▸</span></div>
-      <div class="accordion-content">
-        <div class="accordion-item nested">
-          <div class="accordion-header nested">2 Button Dragonhunter Power 34.5k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/oMeVVSpcStE" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">3 Button Firebrand Condi 31.5k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/GhiIpZ3DPi0" frameborder="0" allowfullscreen></iframe></div>
-        </div>
-      </div>
   </div>
 
-  <div class="accordion-item">
+  <!-- GUARDIAN -->
+  <div class="accordion-item" id="guardian">
+    <div class="accordion-header">Guardian <span class="arrow">▸</span></div>
+    <div class="accordion-content">
+      <div class="accordion-item nested">
+        <div class="accordion-header nested">2 Button Dragonhunter Power 34.5k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/oMeVVSpcStE" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">3 Button Firebrand Condi 31.5k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/GhiIpZ3DPi0" frameborder="0" allowfullscreen></iframe></div>
+      </div>
+    </div>
+  </div>
+
+  <!-- REVENANT -->
+  <div class="accordion-item" id="revenant">
     <div class="accordion-header">Revenant <span class="arrow">▸</span></div>
     <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
   </div>
 
-  <div class="accordion-item">
+  <!-- RANGER -->
+  <div class="accordion-item" id="ranger">
     <div class="accordion-header">Ranger <span class="arrow">▸</span></div>
-      <div class="accordion-content">
-        <div class="accordion-item nested">
-          <div class="accordion-header nested">3 Button Soulbeast Power 32.9k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/mH0yjHQEYio" frameborder="0" allowfullscreen></iframe></div>
-        </div>
+    <div class="accordion-content">
+      <div class="accordion-item nested">
+        <div class="accordion-header nested">3 Button Soulbeast Power 32.9k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/mH0yjHQEYio" frameborder="0" allowfullscreen></iframe></div>
       </div>
+    </div>
   </div>
 
-  <div class="accordion-item">
+  <!-- THIEF -->
+  <div class="accordion-item" id="thief">
     <div class="accordion-header">Thief <span class="arrow">▸</span></div>
     <div class="accordion-content"><p class="empty">No builds added yet.</p></div>
   </div>
 
-  <div class="accordion-item">
+  <!-- ENGINEER -->
+  <div class="accordion-item" id="engineer">
     <div class="accordion-header">Engineer <span class="arrow">▸</span></div>
-      <div class="accordion-content">
-        <div class="accordion-item nested">
-          <div class="accordion-header nested">3 Button Scrapper Power 31.6k Realistic <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/ToWKnYT7ViU" frameborder="0" allowfullscreen></iframe></div>
-        </div>
+    <div class="accordion-content">
+      <div class="accordion-item nested">
+        <div class="accordion-header nested">3 Button Scrapper Power 31.6k Realistic <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/ToWKnYT7ViU" frameborder="0" allowfullscreen></iframe></div>
       </div>
+    </div>
   </div>
 
-  <div class="accordion-item">
+  <!-- ELEMENTALIST -->
+  <div class="accordion-item" id="elementalist">
     <div class="accordion-header">Elementalist <span class="arrow">▸</span></div>
-      <div class="accordion-content">
-        <div class="accordion-item nested">
-          <div class="accordion-header nested">3 Button Tempest Power 33.4k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/yQW9_79EuOY" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">4 Button Tempest Power 35.1k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/lKPPUWWUN_U" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">3 Button Evoker Hybrid 37k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/0F1Z3QyS-PU" frameborder="0" allowfullscreen></iframe></div>
-        </div>
+    <div class="accordion-content">
+      <div class="accordion-item nested">
+        <div class="accordion-header nested">3 Button Tempest Power 33.4k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/yQW9_79EuOY" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">4 Button Tempest Power 35.1k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/lKPPUWWUN_U" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">3 Button Evoker Hybrid 37k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/0F1Z3QyS-PU" frameborder="0" allowfullscreen></iframe></div>
       </div>
+    </div>
   </div>
 
-  <div class="accordion-item">
+  <!-- MESMER -->
+  <div class="accordion-item" id="mesmer">
     <div class="accordion-header">Mesmer <span class="arrow">▸</span></div>
-      <div class="accordion-content">
-        <div class="accordion-item nested">
-          <div class="accordion-header nested">3 Button Chronomancer Condi 31.8k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/oQZ05eU1SXI" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">3 Button Chronomancer Power 31.2k Improved Alacrity <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/zZQ__3HlGS0" frameborder="0" allowfullscreen></iframe></div>
-        </div>
+    <div class="accordion-content">
+      <div class="accordion-item nested">
+        <div class="accordion-header nested">3 Button Chronomancer Condi 31.8k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/oQZ05eU1SXI" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">3 Button Chronomancer Power 31.2k Improved Alacrity <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/zZQ__3HlGS0" frameborder="0" allowfullscreen></iframe></div>
       </div>
+    </div>
   </div>
 
-  <div class="accordion-item">
+  <!-- NECROMANCER -->
+  <div class="accordion-item" id="necromancer">
     <div class="accordion-header">Necromancer <span class="arrow">▸</span></div>
-      <div class="accordion-content">
-        <div class="accordion-item nested">
-          <div class="accordion-header nested">2 Button Harbinger Power 31.9k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/ZbowGR2QzhM" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">4 Button Harbinger Power 34.3k <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/1E4B4Vb_mu8" frameborder="0" allowfullscreen></iframe></div>
-          <div class="accordion-header nested">4 Button Harbinger Condi 32k Parasitic Contagion <span class="arrow">▸</span></div>
-          <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/yMAWag-F4Z0" frameborder="0" allowfullscreen></iframe></div>
-        </div>
+    <div class="accordion-content">
+      <div class="accordion-item nested">
+        <div class="accordion-header nested">2 Button Harbinger Power 31.9k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/ZbowGR2QzhM" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">4 Button Harbinger Power 34.3k <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/1E4B4Vb_mu8" frameborder="0" allowfullscreen></iframe></div>
+        <div class="accordion-header nested">4 Button Harbinger Condi 32k Parasitic Contagion <span class="arrow">▸</span></div>
+        <div class="accordion-content nested"><iframe data-src="https://www.youtube.com/embed/yMAWag-F4Z0" frameborder="0" allowfullscreen></iframe></div>
       </div>
+    </div>
   </div>
 
 </div>
