--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <a href="https://www.youtube.com/@NickTheInfamous" target="_blank" style="color:#e6e6e6; text-decoration:underline; font-size:1.1em;">YouTube Channel</a>
 </div>
 <div style="text-align:center; margin-bottom:16px; color:#bdbdbd; font-size:1em;">
-  Here you'll find my collection of Guild Wars 2 low intensity builds. These are beginner-friendly and designed to help you get into endgame PvE content quickly, succeed in any encounter, and fit well in most squads.
+  Here you'll find my collection of Guild Wars 2 low intensity builds. These are beginner-friendly and designed to help you get into endgame PvE content quickly, succeed in any encounter, and fit well in most squads. I will flesh this out over time but I wanted to have a nice place for people to access these builds for now.
 </div>
 
 <div class="accordion">
