add revenant builds

--- a/index.html
+++ b/index.html
@@ -445,7 +445,29 @@ You can run sigil of impact instead of air as well." target="_blank">link</a><br
     <div class="accordion-item" id="revenant">
       <div class="accordion-header">Revenant <span class="arrow">▸</span></div>
       <div class="accordion-content">
-        <p class="empty">No builds added yet.</p>
+        <div class="accordion-item nested">
+          <div class="accordion-header nested">3 Button Herald Power 30.6k <span class="arrow">▸</span></div>
+          <div class="accordion-content nested">
+            <iframe data-src="https://www.youtube.com/embed/3H1wmUXT3SE" frameborder="0" allowfullscreen></iframe>
+            <p class="build-description">
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PmiAwylxQHMPyh1RNMO6hRSfMCKgJ7la7GA-DSIYR0wfGtJBqQBIz7EHJM2AvlIW2AA-e" target="_blank">link</a><br>
+              <strong>ROTATION:</strong> Sword 2. Try to camp Shiro as much as possible with Impossible Odds up. Vengeful Hammers in Jalis while waiting for Shiro energy. Around 10% in Shiro swap to Jalis.<br>
+              <strong>EXPLANATION:</strong> This is a beginner/low intensity revenant build for fractal/raid/strike content. Realistic == 10 boons. You have traits that scale with number of boons on you.
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion-item nested">
+          <div class="accordion-header nested">3 Button Renegade Condi 30.4k <span class="arrow">▸</span></div>
+          <div class="accordion-content nested">
+            <iframe data-src="https://www.youtube.com/embed/kYO0Xe3ggUA" frameborder="0" allowfullscreen></iframe>
+            <p class="build-description">
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PmSEQLbhQYbUETjkYZEEbkAZGkAHdJrnKA-DSJYmRB/ZEnCIXJgCPGckgYD8W09sCA-e" target="_blank">link</a><br>
+              <strong>ROTATION:</strong> Spear 5. Swap legends as much as possible (your traits give conditions on legend swap). Mallyx elite in Mallyx. Opener is Spear 5 in Kalla, enter combat, swap to Mallyx and proc legend swap traits. Mallyx elite, etc.<br>
+              <strong>EXPLANATION:</strong> This is a beginner/low intensity revenant build for fractal/raid/strike content.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
