Change headings, add caveat section

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               Below you'll find two ways to understand what to expect from these builds:
             </p>
 
-            <h4>By Number of Buttons</h4>
+            <h1>Number of Buttons</h1>
             
             <h5>1-2 Button Builds</h5>
             <p>
@@ -56,7 +56,7 @@
               maintaining a manageable learning curve.
             </p>
 
-            <h4>By DPS Performance</h4>
+            <h1>DPS Performance</h1>
             
             <h5>30-32k DPS</h5>
             <p>
@@ -72,6 +72,14 @@
             <p>
               These higher performing builds will place you in the upper third of DPS in most public groups.
             </p>
+
+            <h1>Real Fights</h1>
+            <p style="margin-bottom: 1em;">
+              While the builds have some trade-offs (outlined below), don't let that discourage you! These builds are more than capable of handling most content in the game and will serve you well. I just want to call out some obvious downsides.</p>
+            <h5>Power Builds</h5>
+            <p>These builds may show lower damage in burst-oriented fights due to their consistent, sustained damage output. While standard power builds typically have strong burst openers, these LI versions may start slower but will often catch up as the fight progresses.</p>
+            <h5>Condition Builds</h5>
+            <p>Some of these condition builds require A LOT of time to ramp up their damage, which can result in lower performance in phased encounters. Additionally, torment-heavy builds may show reduced effectiveness against highly mobile bosses, as movement reduces torment's damage output.</p>
 
             <p class="build-description" style="margin-top: 1.5em;">
               <em>Note: The relationship between button count and DPS output can vary by class and build. Some classes may
