Add opener explanation

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <p style="margin-bottom: 1em;">
               While the builds have some trade-offs (outlined below), don't let that discourage you! These builds are more than capable of handling most content in the game and will serve you well. I just want to call out some obvious downsides.</p>
             <h5>Power Builds</h5>
-            <p>These builds may show lower damage in burst-oriented fights due to their consistent, sustained damage output. While standard power builds typically have strong burst openers, these LI versions may start slower but will often catch up as the fight progresses.</p>
+            <p>These builds may show lower damage in burst-oriented fights due to their consistent, sustained damage output. While standard power builds typically have strong burst openers (strong initial DPS burst in the first 10 to 20 seconds before tapering off), these LI versions may start slower but will often catch up as the fight progresses.</p>
             <h5>Condition Builds</h5>
             <p>Some of these condition builds require A LOT of time to ramp up their damage, which can result in lower performance in phased encounters. Additionally, torment-heavy builds may show reduced effectiveness against highly mobile bosses, as movement reduces torment's damage output.</p>
 
