Nav menu, about me

--- a/index.html
+++ b/index.html
@@ -4,19 +4,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nick's Low Intensity Builds</title>
+  <title>Low Intensity Builds</title>
+  <link rel="preconnect" href="https://www.youtube.com">
+  <link rel="preconnect" href="https://www.gw2skills.net">
   <link rel="stylesheet" href="styles.css" />
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2375120912485535"
     crossorigin="anonymous"></script>
 </head>
 
 <body>
+  <!-- Header Section -->
+  <header class="site-header">
+    <div class="header-content">
+      <h1 class="site-title">Nick The Infamous</h1>
+      <nav class="main-nav">
+        <ul>
+          <li><a href="index.html" class="active">Low Intensity Builds</a></li>
+          <li><a href="about.html">About Me</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-  <h1>Nick's Low Intensity Builds</h1>
-  <div style="text-align:center; margin-bottom:8px;">
-    <a href="https://www.youtube.com/@NickTheInfamous" target="_blank"
-      style="color:#e6e6e6; text-decoration:underline; font-size:1.1em;">YouTube Channel</a>
-  </div>
+  <h1 class="page-title">Low Intensity Builds</h1>
   <div style="text-align:center; margin-bottom:16px; color:#bdbdbd; font-size:1em;">
     Here you'll find my collection of Guild Wars 2 low intensity builds. These are beginner-friendly and designed to
     help you get into endgame PvE content quickly, succeed in any encounter, and fit well in most squads.
@@ -121,9 +131,7 @@
           <div class="accordion-content nested">
             <iframe data-src="https://www.youtube.com/embed/3RQamzo3aPI" frameborder="0" allowfullscreen></iframe>
             <p class="build-description">
-              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PKiAgelFwsYUsJWJO+K2zSA-DSIYR0wXGtlAVUA2en4IhxG4tExyGA-e
-
-You can run sigil of impact instead of sigil of air as well." target="_blank">link</a><br>
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PKiAgelFwsYUsJWJO+K2zSA-DSIYR0wXGtlAVUA2en4IhxG4tExyGA-e" target="_blank">link</a><br>
               <strong>ROTATION:</strong> Spam f1. That's it.
 
               Opener is To The Limit into Chant of Action (for motivation, read grandmaster trait in paragon) into F1.
@@ -377,9 +385,7 @@ I was a dirty min maxer you don't need the two sinister pieces vipers is fine yo
           <div class="accordion-content nested">
             <iframe data-src="https://www.youtube.com/embed/M9xxFXsYJqo" frameborder="0" allowfullscreen></iframe>
             <p class="build-description">
-              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PKSAElRwoYTsFmJO2SVtKA-DSIYRUwXGtlAVUA2eW4IhxG4tExyGA-e
-
-You can run sigil of impact instead of air as well." target="_blank">link</a><br>
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PKSAElRwoYTsFmJO2SVtKA-DSIYRUwXGtlAVUA2eW4IhxG4tExyGA-e" target="_blank">link</a><br>
               <strong>ROTATION:</strong> This is a priority based rotation. The priority in order is: F1 (Burst) - Blood
               Reckoning into F1 - GS 2 (Hundred Blades) - GS 4 (Bladetrail) - GS 5 (Rush). You make a decision on what
               to cast between auto attack chains. Do not cancel auto attack chains. Spam outrage off cool down for
