Update about me

--- a/about.html
+++ b/about.html
@@ -34,8 +34,13 @@
       <p>I regularly post POV (Point of View) videos showcasing my builds across different game modes. These videos demonstrate that you can perform well in most public groups playing these builds. That won't always be true, some groups are much better than others. Check out my <a href="https://www.youtube.com/playlist?list=PLfvsp7LCVdzWTo96E_BMrQc5vY3JY2uI9" target="_blank">POVs playlist</a> to see them in action.</p>
       
       <h3>My Background</h3>
-      <p>I'm a veteran Guild Wars 2 player who has been playing on and off since the game's original release. Over time I've accumulated over 2,000 raid boss kills and most (but not all) CM clears. I haven't been playing in the last few years but I came back recently and it's been a lot of fun. </p>
+      <p>I'm a veteran Guild Wars 2 player who has been playing on and off since the game's original release. I haven't been playing in the last few years but I came back recently and it's been a lot of fun. </p>
       <p>I also don't claim to be a pro player. The stuff I create may be further optimized so I don't claim that I have the absolute best stuff or best knowledge of the game.</p>
+      
+      <h3>My Build Philosophy</h3>
+      <p>My approach to builds focuses on accessibility and effectiveness, particularly for newer or more casual players.</p>
+      <p>I focus on Viper's, Berserker's, and Assassin's gear because these sets are more flexible across different builds and classes. This makes them more cost-efficient as your first ascended sets, as they can be used effectively on multiple characters and builds. I avoid more specialized stat combinations even in cases where they may offer more damage (see grieving 1 button paragon, etc.) since they offer less flexibility and may not be as versatile for players building their initial sets.</p>
+      <p>I design builds to hit critical hit chance caps without relying on food buffs or infusions. This makes the builds more sustainable for regular play and raid training without requiring players to spend gold on expensive consumables just to make the build function.</p>
     </div>
   </main>
 
