--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-adsense-account" content="ca-pub-2375120912485535">
   <title>About Me</title>
   <link rel="preconnect" href="https://www.youtube.com">
   <link rel="stylesheet" href="styles.css" />
