Add thief builds

--- a/index.html
+++ b/index.html
@@ -540,7 +540,35 @@ I was a dirty min maxer you don't need the two sinister pieces vipers is fine yo
     <div class="accordion-item" id="thief">
       <div class="accordion-header">Thief <span class="arrow">▸</span></div>
       <div class="accordion-content">
-        <p class="empty">No builds added yet.</p>
+        <div class="accordion-item nested">
+          <div class="accordion-header nested">1 Button Deadeye Power 29k Realistic <span class="arrow">▸</span></div>
+          <div class="accordion-content nested">
+            <iframe data-src="https://www.youtube.com/embed/Xub_2dOWUQ4" frameborder="0" allowfullscreen></iframe>
+            <p class="build-description">
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PaiAoqlZwkYXMM2JO6LfvOA-DSIYR0wfG1KBqQBIzzCHJM2AvlIW2AA-e" target="_blank">link</a><br>
+              <strong>ROTATION:</strong> Set your pistol 3 skill to auto cast. Just use your mark that's it.<br>
+              <strong>EXPLANATION:</strong> This is a beginner/low intensity thief build for fractal/raid/strike content.
+              <br><br>
+              Realistic == 10 boons on you, 10 conditions on golem. You have traits that scale with number of boons on you and the number of conditions on golem.
+              <br><br>
+              I decided to post this one even though others have this build. I saw that others were running other utilities or sometimes the initiative regeneration signet. However those versions yielded me ~28k DPS. I switched to impact instead and ran full zerkers with precision signet to get 29k. So a very slight increase if you plan on running this build as a 1 buttoner.
+            </p>
+          </div>
+        </div>
+
+        <div class="accordion-item nested">
+          <div class="accordion-header nested">3 Button Deadeye Power 33.2k Realistic <span class="arrow">▸</span></div>
+          <div class="accordion-content nested">
+            <iframe data-src="https://www.youtube.com/embed/dpzJ61jnV4M" frameborder="0" allowfullscreen></iframe>
+            <p class="build-description">
+              <strong>BUILD:</strong> <a href="https://gw2skills.net/editor/?PaSAYlZwkYXMM2JO6LbvOA-DSIYRUwfG1KBqQBIzzCHJM2AvlIW2AA-e" target="_blank">link</a><br>
+              <strong>ROTATION:</strong> Mark, spam staff 2, make sure to trigger Maleficent Seven, use Mercy to reset malice and initiative. Make sure to not drop your mark so use it throughout.<br>
+              <strong>EXPLANATION:</strong> This is a beginner/low intensity thief build for fractal/raid/strike content.
+              <br><br>
+              Realistic == 10 boons on you, 10 conditions on golem. You have traits that scale with number of boons on you and the number of conditions on golem.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
 
